--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
   <section class="content-header">
     <h1>{{title}}</h1>
     <ol class="breadcrumb">
-      <li><a routerLink="/"><i class="fa fa-dashboard"></i>主页</a></li>
+      <li><a routerLink="/"><i class="fa fa-dashboard"></i>Home</a></li>
       <li class="active">{{title}}</li>
     </ol>
   </section>
@@ -13,13 +13,13 @@
       [columns]="gridColumns"
       [menus]="gridActions"
       [showIndex]="true" 
-      [indexTitle]="'序号'" 
+      [indexTitle]="'No.'" 
       [pageSize]=10 
       [pageSizes]="[10,20,50,100]" 
       [resetUrl]="resetUrl" 
       [sortBy]="'name_ping_yin'" 
       [orderBy]="'asc'"
-      [FTSearch]="{'show': true, 'placeholder': '搜索', 'forNames': ['name_ping_yin','name']}"
+      [FTSearch]="{'show': true, 'placeholder': 'Search', 'forNames': ['name_ping_yin','name']}"
       [selection]="{'show': false, 'multiple': true}"
     >
     </app-grid>
