--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -10,7 +10,7 @@
       <form>
         <div class="form-group has-feedback">
           <input type="text" class="form-control" name="username" [(ngModel)]="username" placeholder="User Name">
-          <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+          <span class="glyphicon glyphicon-user form-control-feedback"></span>
         </div>
         <div class="form-group has-feedback">
           <input type="password" class="form-control" name="password" [(ngModel)]="password" placeholder="Password">
@@ -23,7 +23,17 @@
         </div>
         <div class="row">
           <!-- /.col -->
-          <div class="col-xs-4" style="float:right">
+          <div class="col-xs-8">
+            <div class="radio">
+              <label>
+                <input type="radio" name="authBy" [(ngModel)]="authBy" value="ldap" checked>LDAP
+              </label>
+              <label>
+                <input type="radio" name="authBy" [(ngModel)]="authBy" value="local">Local
+              </label>
+            </div>
+          </div>
+          <div class="col-xs-4 pull-right">
             <button type="button" (click)="login()" class="btn btn-primary btn-block btn-flat">Sign In</button>
           </div>
           <!-- /.col -->
