completed demo dev.

--- a/client/src/app/pages/user/user.component.html
+++ b/client/src/app/pages/user/user.component.html
@@ -24,7 +24,7 @@
         [sortBy]="'username'" 
         [orderBy]="'asc'"
         [FTSearch]="{'show': true, 'placeholder': 'Search', 'forNames': ['username']}"
-        [selection]="{'show': false, 'multiple': true}"
+        [selection]="{'show': true, 'multiple': true}"
       >   
       </app-grid>   
     </section>
